--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -6,6 +6,7 @@ on:
 
 permissions:
   contents: read
+  id-token: write
 
 defaults:
       run:
@@ -40,10 +41,16 @@ jobs:
 
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v1
-   
+
+    - name: configure aws credentials
+      uses: aws-actions/configure-aws-credentials@v3
+      with:
+        role-to-assume: arn:aws:iam::060399601368:role/github-actions-role
+        aws-region: us-east-1
+
     - name: Terraform Init
       working-directory: ./iam
-      run: terraform init --input=false --
+      run: terraform init 
 
     - name: Terraform Plan
       working-directory: ./iam
@@ -64,7 +71,13 @@ jobs:
 
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v1
-   
+
+    - name: configure aws credentials
+      uses: aws-actions/configure-aws-credentials@v3
+      with:
+        role-to-assume: arn:aws:iam::060399601368:role/github-actions-role
+        aws-region: us-east-1
+
     - name: Terraform Init
       working-directory: ./core_infra
       run: terraform init
