--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -60,7 +60,7 @@ jobs:
       run: terraform plan -input=false
     
     - name: Terraform Apply
-      if: github.ref == 'refs/heads/"main"' && github.event_name == 'push'
+      if: github.ref == 'refs/heads/main' && github.event_name == 'push'
       run: terraform apply -auto-approve -input=false
 
   terraform-deploy-core-infra:
