adding mongodb module to infra

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -20,7 +20,7 @@ jobs:
 
     steps:
     - name: Terraform Format
-      working-directory: ./core_infra
+      working-directory: core_infra
       id: fmt
       run: terraform fmt --recursive --check
 
