--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -19,6 +19,9 @@ jobs:
     
 
     steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+      
     - name: Terraform Format
       id: fmt
       run: terraform fmt -recursive -check .
